--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
           Den AI-didaktiske relationsmodel
         </a>
 
-        <a href="https://techmieriber-sketch.github.io/AIforgym/" target="_blank" rel="noopener">
-          Kom godt i gang med AI-undervisning
+        <a href="https://techmieriber-sketch.github.io/AIiundervisningen/" target="_blank" rel="noopener">
+          Kom godt i gang med AI i din undervisning
         </a>
       </div>
     </div>
